# cryptocurrency_parser

./: Cargo.toml  Makefile  Readme.md  data.txt  output.json
src/: grammar.pest  lib.rs  main.rs
tests/: Unit_tests.rs  price_value_test.rs
