[package]
name = "solana_price_parser"
version = "0.1.0"
edition = "2021"
authors = ["Yelyzaveta Bohun"]
description = "A parser for extracting Solana price data for the last 2 years."
readme = "README.md"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = "4.0" 
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11" 
pest = "2.7.14"
pest_derive = "2.7.14"
