[package]
name = "cryptocurrency_parser"
version = "0.1.1"
edition = "2021"
authors = ["Yelyzaveta Bohun"]
description = "A parser of different cryptocurrencies"
repository = "https://github.com/Bogunok/cryptocurrency_parser"
readme = "README.md"
license = "MIT"

[dependencies]
thiserror = "2.0.0"
anyhow = "1.0"
clap = "4.0" 
serde = { version = "1.0", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
serde_json = "1.0.132"
